--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -6,16 +6,18 @@
 
     &__logo-box{
         position: absolute;
+        top: 0.5rem;
         width: 25rem;
 
         @include respond(tab-port){
+            top: 1rem;
             width: 20rem;
         }
     }
 
     &__logo{
-        width: 100%;
-        height: auto;
+        max-width: 100%;
+        height: auto !important;
     }
 
     &__navbar{
