--- a/style.css
+++ b/style.css
@@ -100,13 +100,15 @@ body {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25); }
   .header__logo-box {
     position: absolute;
+    top: 0.5rem;
     width: 25rem; }
     @media (max-width: 56.25em) {
       .header__logo-box {
+        top: 1rem;
         width: 20rem; } }
   .header__logo {
-    width: 100%;
-    height: auto; }
+    max-width: 100%;
+    height: auto !important; }
   .header__navbar {
     float: right; }
     .header__navbar .menu {
