--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,10 +3,12 @@
     background-color: $color-primary;
     max-width: 100%;
     box-shadow: 0px 0px 20px rgba($color-black, .25);
+    position: relative;
 
     &__logo-box{
         position: absolute;
         width: 25rem;
+        top: 0.5rem;
 
         @include respond(tab-port){
             width: 20rem;
