--- a/style.css
+++ b/style.css
@@ -97,10 +97,12 @@ body {
   font-family: 'Great Vibes', cursive;
   background-color: #2e7d32;
   max-width: 100%;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25); }
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  position: relative; }
   .header__logo-box {
     position: absolute;
-    width: 25rem; }
+    width: 25rem;
+    top: 0.5rem; }
     @media (max-width: 56.25em) {
       .header__logo-box {
         width: 20rem; } }
