navmenu li: display inline-block

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -30,7 +30,7 @@
 
 
             li {
-                display: inline;
+                display: inline-block;
 
                 a:link,a:visited{
                     display: block;
