--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -4,4 +4,8 @@
     border-radius: 3px;
     box-shadow: 0px 0px 20px rgba($color-black, .25);
     color: $color-black;
+
+    @include respond(phone){
+        padding: 1rem;
+    }
 }
