--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     padding-top: 6rem;
     color: $color-grey-light-1;
 
+    @include respond(tab-port){
+        font-size: 1.4rem;
+    }
+
     &__logo-box{
         text-align: center;
         margin-bottom: 5rem;
@@ -13,6 +17,8 @@
     &__contact{
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
 
         ul{
             list-style: none;
@@ -26,6 +32,8 @@
     &__info{
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
 
         ul{
             list-style: none;
