--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,35 +2,65 @@
     font-family: 'Great Vibes', cursive;
     background-color: $color-primary;
     max-width: 100%;
-    box-shadow: 0px 0px 20px rgba($color-black, .25);
-    position: relative;
+    box-shadow: 0px 0px 2rem rgba($color-black, .3);
 
-    &__logo-box{
-        position: absolute;
-        width: 25rem;
-        top: 0.5rem;
+    &__container{
+        max-width: 125rem;
+        margin: 0 auto;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
 
         @include respond(tab-port){
-            width: 20rem;
+            padding-bottom: 0;
+        }
+    }
+
+    &__logo-box{
+        display: block;
+        float: left;
+        
+        @include respond(tab-port){
+            float: none;
+            text-align: center;
         }
     }
 
     &__logo{
+        display: block;
+        max-height: 100%;
         max-width: 100%;
-        height: auto !important;
+
+        @include respond(tab-port){
+            display: inline;
+        }
     }
 
+
     &__navbar{
-        float: right;
+         float: right;
+
+        @include respond(tab-port){
+            float: none;
+        }
 
         .menu{
             list-style-type: none;
             margin: 0;
             padding: 0;
+            display: inline-block;
+
+            @include respond(tab-port){
+                display: block;
+                width: 100%;
+            }
 
 
             li {
-                display: inline-block;
+                float: left;
+
+                @include respond(tab-port){
+                    width: 100%;
+                }
 
                 a:link,a:visited{
                     display: block;
@@ -42,16 +72,21 @@
                     color: $color-white;
 
                     @include respond(tab-port){
-                        font-size: 2rem;
+                        font-size: 2.25rem;
                     }
                 }
 
                 a:hover{
-                    background-color: $color-primary-dark;
+                    color: $color-grey-light-2;
+                    transform: translateY(-3px);
+                }
+
+                a:focus{
+                    transform: translateY(0);
                 }
             }
         }
     }
 
-
+    @include clearfix;
 }
