--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  Theme Name:   Hurtownia Theme
  Description:  Hurtownia Theme
  Author:       Michał Żyłka
- Version:      1.0.0
+ Version:      1.0.2
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -68,7 +68,10 @@ body {
   @media (max-width: 56.25em) {
     .row {
       max-width: 75rem;
-      padding: 0 2rem; } }
+      padding: 3rem; } }
+  @media (max-width: 37.5em) {
+    .row {
+      padding: 0; } }
   .row::after {
     content: "";
     display: table;
@@ -97,26 +100,48 @@ body {
   font-family: 'Great Vibes', cursive;
   background-color: #2e7d32;
   max-width: 100%;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-  position: relative; }
+  box-shadow: 0px 0px 2rem rgba(0, 0, 0, 0.3); }
+  .header__container {
+    max-width: 125rem;
+    margin: 0 auto;
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
+    @media (max-width: 56.25em) {
+      .header__container {
+        padding-bottom: 0; } }
   .header__logo-box {
-    position: absolute;
-    width: 25rem;
-    top: 0.5rem; }
+    display: block;
+    float: left; }
     @media (max-width: 56.25em) {
       .header__logo-box {
-        width: 20rem; } }
+        float: none;
+        text-align: center; } }
   .header__logo {
-    max-width: 100%;
-    height: auto !important; }
+    display: block;
+    max-height: 100%;
+    max-width: 100%; }
+    @media (max-width: 56.25em) {
+      .header__logo {
+        display: inline; } }
   .header__navbar {
     float: right; }
+    @media (max-width: 56.25em) {
+      .header__navbar {
+        float: none; } }
     .header__navbar .menu {
       list-style-type: none;
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      display: inline-block; }
+      @media (max-width: 56.25em) {
+        .header__navbar .menu {
+          display: block;
+          width: 100%; } }
       .header__navbar .menu li {
-        display: inline-block; }
+        float: left; }
+        @media (max-width: 56.25em) {
+          .header__navbar .menu li {
+            width: 100%; } }
         .header__navbar .menu li a:link, .header__navbar .menu li a:visited {
           display: block;
           text-decoration: none;
@@ -127,9 +152,16 @@ body {
           color: #fff; }
           @media (max-width: 56.25em) {
             .header__navbar .menu li a:link, .header__navbar .menu li a:visited {
-              font-size: 2rem; } }
+              font-size: 2.25rem; } }
         .header__navbar .menu li a:hover {
-          background-color: #005005; }
+          color: #e0e0e0;
+          transform: translateY(-3px); }
+        .header__navbar .menu li a:focus {
+          transform: translateY(0); }
+  .header::after {
+    content: "";
+    display: table;
+    clear: both; }
 
 .container {
   padding: 2rem;
@@ -137,6 +169,9 @@ body {
   border-radius: 3px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
   color: #000; }
+  @media (max-width: 37.5em) {
+    .container {
+      padding: 1rem; } }
 
 .sidebar {
   background-color: #fff;
@@ -149,19 +184,26 @@ body {
   max-width: 100%;
   padding-top: 6rem;
   color: #f7f7f7; }
+  @media (max-width: 56.25em) {
+    .footer {
+      font-size: 1.4rem; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 5rem; }
   .footer__contact {
     border-top: 1px solid #f7f7f7;
-    padding-top: 2rem; }
+    padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem; }
     .footer__contact ul {
       list-style: none; }
   .footer__map {
     margin-top: 1.5rem; }
   .footer__info {
     border-top: 1px solid #f7f7f7;
-    padding-top: 2rem; }
+    padding-top: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem; }
     .footer__info ul {
       list-style: none; }
       .footer__info ul li a:link, .footer__info ul li a:visited {
